# Amigo

Machine learning/: Google.py  client important.json  google_api.py  main.py
Machine learning/token files/: token_calendar_v3.pickle
OOPs/: main.py
class/: MCQ.xlsx  main.py  test_organiser.py
database/: main.py
fastApi/: main.py
myworld/: db.sqlite3
myworld/important/: admin.py  models.py
myworld/members/: admin.py  models.py
myworld/myworld/: settings.py  urls.py
pythonProject/: main.py
pythonProject1/: main.py
pythonProject10/: Name.py  main.py
pythonProject11/: main.py
pythonProject12/: Requirements  main.py
pythonProject13/: main.py
pythonProject14/: Requirements  config.txt  main.py
pythonProject15/: test1.py  test2.py
pythonProject16/: Requirements  main.py
pythonProject17/: database.py  main.py
pythonProject18/: databse.py  main.py
pythonProject19/: Code.py  Model.py  database.py  main.py
pythonProject2/: main.py
pythonProject21/: main.py
pythonProject22/: Models.py  database.py  main.py
pythonProject23/: code.py  database.py  main.py  model.py
pythonProject24/: Model.py  code.py  database.py  main.py  requirements.txt
pythonProject26/: Model.py  code.py  database.py  main.py
pythonProject27/todo/: main.py  pyproject.toml
pythonProject27/todo/todo/model/: model.py
pythonProject4/: main.py
pythonProject5/: main.py
pythonProject6/: main.py
pythonProject7/: main.py
pythonProject8/: main.py
pythonProject9/: main.py
todo list/: code.py  database.py  main.py  model.py
(+11 files in other folders)
